chore: structure and unify CSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <section id="colors">
         <h2>Colors</h2>
-        <ul>
+        <ul class="flex-wrap">
           <li class="color-item primary-color">
             <h3>Primary</h3>
             <p class="code">#3f2305</p>
@@ -51,7 +51,7 @@
       </section>
       <section id="fonts">
         <h2>Fonts</h2>
-        <ul>
+        <ul class="flex-wrap">
           <li class="font-item">
             <h3>Montserrat</h3>
             <p class="montserrat-regular">
